# service-tracker

./: .dockerignore  .editorconfig  .gitignore  .lefthook.yml  .renovaterc.json  Dockerfile  README.md  committed.toml  docker-compose.yml  oxfmt.config.ts  oxlint.config.ts  package.json  pyproject.toml  tsconfig.json
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.devcontainer/scripts/: on-create.sh  post-create.sh  post-start.sh
.github/workflows/: check.yml
server/: Dockerfile  pyproject.toml
server/src/service_tracker_server/: __init__.py  __main__.py
web/: package.json  react-router.config.ts  tsconfig.json  vite.config.ts
web/src/: dev-stylex-inject.tsx  dev-stylex-virtual.d.ts  home.tsx  root.tsx  routes.ts
